--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+absl-py==1.4.0
 alembic==1.9.4
 antlr4-python3-runtime==4.9.3
 asttokens==2.2.1
+astunparse==1.6.3
 backcall==0.2.0
+cachetools==5.3.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -19,15 +22,22 @@ Flask==2.2.3
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==3.0.3
+flatbuffers==23.5.26
 fonttools==4.38.0
+gast==0.4.0
 gitdb==4.0.10
 GitPython==3.1.31
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 greenlet==2.0.2
+grpcio==1.56.0
 gunicorn==20.1.0
+h5py==3.9.0
 Hydra==2.5
 hydra-core==1.3.1
 idna==3.4
-imbalanced-learn==0.10.1
+imbalanced-learn==0.11.0
 imblearn==0.0
 importlib-metadata==5.2.0
 importlib-resources==5.12.0
@@ -39,7 +49,9 @@ Jinja2==3.1.2
 joblib==1.2.0
 jupyter-client==8.0.3
 jupyter-core==5.2.0
+keras==2.13.1
 kiwisolver==1.4.4
+libclang==16.0.6
 llvmlite==0.39.1
 Mako==1.2.4
 Markdown==3.4.1
@@ -47,13 +59,14 @@ MarkupSafe==2.1.2
 marshmallow==3.19.0
 matplotlib==3.7.0
 matplotlib-inline==0.1.6
-mlflow==2.1.1
+mlflow==2.4.2
 mysqlclient==2.1.1
 nest-asyncio==1.5.6
 numba==0.56.4
 numpy==1.24.2
 oauthlib==3.2.2
 omegaconf==2.3.0
+opt-einsum==3.3.0
 packaging==22.0
 pandas==1.5.3
 parso==0.8.3
@@ -67,6 +80,8 @@ psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==10.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 Pygments==2.14.0
 PyJWT==2.6.0
 PyMySQL==1.0.2
@@ -77,6 +92,9 @@ PyYAML==6.0
 pyzmq==25.0.0
 querystring-parser==1.2.4
 requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.3.0
 scipy==1.10.1
 shap==0.41.0
 six==1.16.0
@@ -87,12 +105,20 @@ SQLAlchemy==1.4.46
 sqlparse==0.4.3
 stack-data==0.6.2
 tabulate==0.9.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.3.0
 threadpoolctl==3.1.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.9.0
+typing-extensions==4.5.0
 urllib3==1.26.14
 wcwidth==0.2.6
 websocket-client==1.5.1
 Werkzeug==2.2.3
+wrapt==1.15.0
 zipp==3.14.0
