--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ charset-normalizer==3.0.1
 click==8.1.3
 cloudpickle==2.2.1
 comm==0.1.2
-contourpy==1.0.7
+contourpy
 cycler==0.11.0
 databricks-cli==0.17.4
 debugpy==1.6.6
@@ -63,7 +63,7 @@ mlflow==2.4.2
 mysqlclient==2.1.1
 nest-asyncio==1.5.6
 numba==0.56.4
-numpy==1.24.2
+numpy
 oauthlib==3.2.2
 omegaconf==2.3.0
 opt-einsum==3.3.0
